# nendo

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
almide/: ROADMAP.md  almide.toml  mesh_fix2.cwasm  nendo  nendo.cwasm  nendo.wasm  test_acc.cwasm  tgl.cwasm  tm2.cwasm  tm3.cwasm  tm4.cwasm  tm5.cwasm  tms.cwasm
almide/.almide/cache/: _tmp_test_lambda_almd.hash  src_main_almd.hash  src_web_almd.hash
almide/src/: accessor.almd  glb.almd  main.almd  mesh.almd  render.almd  skin.almd  viewer_main.almd  vrm.almd  web.almd  web.almd.bak
almide/web/: editor.html  index.html  nendo-web.wasm  nendo.wasm  obsid.js  viewer.html
nendo/: __init__.py  __main__.py  bake.py  cli.py  migrate.py  vrm.py
nendo/blender_scripts/: export_info.py
nendo/editor/: server.py
nendo/editor/static/: index.html  playground.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  glb.rs  main.rs
vrm_kit/: __init__.py  __main__.py  cli.py  glb.py  vrm.py
vrm_kit/blender_scripts/: convert_fbx.py
vrm_kit/editor/: server.py
vrm_kit/editor/static/: index.html  playground.html
vrmkit/: __init__.py  __main__.py  blender.py  cli.py  vrm.py
vrmkit/blender_scripts/: apply_thumbnail.py
vrmkit/editor/: server.py
vrmkit/editor/static/: index.html  playground.html
