[project]
name = "nendo"
version = "0.1.0"
description = "VRM avatar file toolkit — inspect, edit, validate"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.scripts]
nendo = "nendo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
